# ContextOS

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
apps/cli/: Cargo.toml
apps/cli/src/: install.rs  main.rs  mcp.rs  watch.rs
apps/extension/: .vscodeignore  README.md  package.json  tsconfig.json
apps/extension/src/: autoInstaller.ts  contextCollector.ts  extension.ts  optimizerClient.ts  sessionStats.ts  types.ts
apps/extension/src/commands/: optimize.ts  stats.ts
apps/landing/: .gitignore  README.md  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/landing/public/: .gitkeep
apps/landing/src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
apps/landing/src/app/docs/: layout.tsx  page.tsx
apps/landing/src/app/docs/algorithms/: page.tsx
apps/landing/src/app/docs/getting-started/: page.tsx
apps/landing/src/app/docs/how-it-works/: page.tsx
apps/landing/src/app/docs/mcp/: page.tsx
apps/landing/src/app/docs/publishing/: page.tsx
apps/landing/src/components/docs/: DocsMobileDrawer.tsx  DocsPage.tsx  DocsPager.tsx  DocsSidebar.tsx
apps/landing/src/components/sections/: CodeShowcase.tsx  FeatureGrid.tsx  Footer.tsx  Hero.tsx  InstallSection.tsx  Navbar.tsx  Pipeline.tsx  TokenCounter.tsx
apps/landing/src/components/ui/: Badge.tsx  Button.tsx  GlowCard.tsx
apps/landing/src/hooks/: useCountUp.ts
apps/landing/src/lib/: constants.ts  utils.ts
crates/core-engine/: Cargo.toml
crates/core-engine/src/: lib.rs  types.rs
crates/core-engine/src/budget/: mod.rs
crates/core-engine/src/compress/: mod.rs
crates/core-engine/src/dedup/: minhash.rs  mod.rs  simhash.rs
crates/core-engine/src/ranking/: bm25.rs  mod.rs  rm3.rs  rrf.rs
crates/core-engine/src/skeleton/: mod.rs
crates/core-engine/tests/: pipeline.rs
crates/graph/: Cargo.toml
crates/graph/src/: betweenness.rs  builder.rs  community.rs  lib.rs  pagerank.rs  query.rs  reachable.rs  rwr.rs  steiner.rs  store.rs  types.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/tokenizer/: Cargo.toml
crates/tokenizer/src/: lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: count_min.rs  lib.rs  usage.rs
docs/: ALGORITHMS.md  ARCHITECTURE.md  DEPLOYMENT.md  PUBLISHING.md  USAGE.md
infra/docker/: Dockerfile
infra/scripts/: build.sh  install.sh
