[workspace]
resolver = "2"
members = [
    "crates/core-engine",
    "crates/tokenizer",
    "crates/parser",
    "crates/utils",
    "crates/graph",
    "apps/cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["ContextOS Contributors"]
repository = "https://github.com/contextos/contextos"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
once_cell = "1.19"
ahash = "0.8"
rayon = "1.10"
tree-sitter = "0.22"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-python = "0.21"
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
notify = "6.1"
walkdir = "2.5"
ignore = "0.4"
crossbeam-channel = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
