[package]
name = "contextos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "contextos"
path = "src/main.rs"

[dependencies]
contextos-core-engine = { path = "../../crates/core-engine" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
