[package]
name = "contextos-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local-first, lossless token-reduction engine for AI coding assistants. Graph-aware context selection + AST-aware compression. CLI + MCP server for Claude Code, Cursor, etc."
keywords = ["llm", "tokens", "context", "code", "mcp"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
homepage = "https://github.com/DhiravPatel/ContextOS"

[[bin]]
name = "contextos"
path = "src/main.rs"

[dependencies]
contextos-core-engine = { path = "../../crates/core-engine" }
contextos-graph = { path = "../../crates/graph" }
contextos-utils = { path = "../../crates/utils" }
contextos-tokenizer = { path = "../../crates/tokenizer" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
notify.workspace = true
crossbeam-channel.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.10"
