[package]
name = "contextos-core-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
contextos-utils = { path = "../utils" }
contextos-tokenizer = { path = "../tokenizer" }
contextos-parser = { path = "../parser" }
serde.workspace = true
serde_json.workspace = true
ahash.workspace = true
rayon.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-python.workspace = true
